[package]
name = "squads-client"
version = "0.1.0"
edition = "2021"
authors = ["solana-governance contributors"]
license = "MIT OR Apache-2.0"
description = "Minimal, dependency-light Rust client for the Squads V4 multisig program. Provides PDA helpers, account deserializers, instruction builders, and TransactionMessage compilation without depending on anchor-lang."
repository = "https://github.com/anza-xyz/solana-governance"
keywords = ["solana", "squads", "multisig"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[lib]
name = "squads_client"
path = "src/lib.rs"

[features]
default = ["rpc"]
# Enables `SquadsMultisigClient` (an async wrapper that fetches `Multisig` account
# state via `solana_rpc_client::nonblocking::rpc_client::RpcClient`) and the
# `router` module (direct-vs-vault transaction routing). Disable this feature if
# you want to bring your own RPC stack (e.g. a Jito fork) and only use the
# lower-level `SquadsClient` instruction builder.
rpc = [
    "dep:solana-rpc-client",
    "dep:solana-transaction",
    "dep:solana-keypair",
    "dep:solana-signer",
    "dep:solana-signature",
    "dep:async-trait",
]

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
sha2 = "0.10"
solana-program = { version = ">=1.18, <3", features = ["borsh"] }
solana-rpc-client = { version = ">=2.1, <3", optional = true }
solana-transaction = { version = ">=2.1, <3", features = ["bincode"], optional = true }
solana-keypair = { version = ">=2.1, <3", optional = true }
solana-signer = { version = ">=2.1, <3", optional = true }
solana-signature = { version = ">=2.1, <3", optional = true }
async-trait = { version = "0.1", optional = true }
thiserror = "1"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt"] }
