[package]
name = "cli"
version = "0.3.0-40000"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
clap = { version = "4", features = ["derive"] }
meta-merkle-tree = { path = "../../jito-tip-router/meta_merkle_tree/" }
tip-router-operator-cli = { path = "../../jito-tip-router/tip-router-operator-cli/" }
solana-accounts-db = { package = "solana-accounts-db", git = "https://github.com/jito-foundation/jito-solana.git", rev = "0ecd70f3bdaed01d6b2b371422d3ec874c87486f" }
solana-runtime = { package = "solana-runtime", git = "https://github.com/jito-foundation/jito-solana.git", rev = "0ecd70f3bdaed01d6b2b371422d3ec874c87486f" }
solana-program = { version = "4.0.0", default-features = false, features = [] }
solana-vote-program = { package = "solana-vote-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "0ecd70f3bdaed01d6b2b371422d3ec874c87486f" }
solana-vote = { package = "solana-vote", git = "https://github.com/jito-foundation/jito-solana.git", rev = "0ecd70f3bdaed01d6b2b371422d3ec874c87486f" }
solana-sdk = "=4.0.1"
solana-stake-interface = { version = "3.1.0", features = ["sysvar"] }
anchor-lang = "0.31.1"
log = "0.4.22"
env_logger = "0.10.2"
flate2 = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.86"
im = "15.1"
itertools = "0.11"
borsh = { version = "0.10.3" }
ncn-snapshot = { path = "../programs/ncn-snapshot" }
squads-client = { path = "../../squads-client" }
spl-stake-pool = { version = "2.0.0", default-features = false, features = ["no-entrypoint"] }
borsh_stake = { package = "borsh", version = "1.5", default-features = false }

[dev-dependencies]
tempfile = "3"
