[package]
name = "tests"
version = "0.2.0-40000"
description = "Governance NCN Voting Tests"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
ncn-snapshot = { path = "../programs/ncn-snapshot" }
borsh = { version = "0.10.3" }
meta-merkle-tree = { path = "../../jito-tip-router/meta_merkle_tree/" }
cli = { path = "../cli"}
