[package]
name = "verifier-service"
version = "0.2.0-40000"
edition = "2021"
build = "build.rs"

[[bin]]
name = "verifier-service"
path = "src/main.rs"

[[bin]]
name = "verifier-loadtest"
path = "src/bin/loadtest.rs"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower_governor = "0.7.0"
ipnet = "2"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0.12"
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.22"
env_logger = "0.10.2"
anchor-lang = "0.31.1"
solana-sdk = "=4.0.1"
ncn-snapshot = { path = "../programs/ncn-snapshot" }
borsh = { version = "1.5.7" }
bs58 = "0.5"
meta-merkle-tree = { path = "../../jito-tip-router/meta_merkle_tree/" }
cli = { path = "../cli"}
once_cell = "1"
sysinfo = { version = "0.30", default-features = false, features = ["multithread"] }

[dev-dependencies]
serial_test = "3.0"
