[package]
name = "svmgov"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["bergabman", "berg@turbin3.org"]

[[bin]]
name = "svmgov"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env"] }
anyhow = "1.0.98"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
anchor-client = { version = "0.31.1", features = ["async"]}
anchor-lang = "0.31.1"
rand = { version = "0.9.1", features = ["thread_rng"]}
log = "0.4.27"
env_logger = "0.11.8"
chrono = "0.4.41"
textwrap = "0.16.2"
indicatif = "0.18.0"
reqwest = { version = "0.12.23", features = ["json"] }
bs58 = "0.5.1"
hex = "0.4.3"
gov-v1 = {git = "https://github.com/dhruvsol/gov-v1-testnet", branch = "update-3.0-testnet" }
dotenv = "0.15.0"
toml = "0.8"
dirs = "5.0"
inquire = "0.7"
base64 = "0.22.1"
comfy-table = "7.1"
[dev-dependencies]
tempfile = "3.0"