[package]
name = "svmgov_program"
version = "0.2.0-40000"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "svmgov_program"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"]}
ncn-snapshot = { path = "../../../../ncn/programs/ncn-snapshot", features = ["cpi"] }
solana-security-txt = "1.1.3"
solana-vote-interface = { version = "6.0", default-features = false, features = ["bincode"] }
